test/asm/positive/define_whitespace.asm
DEFINE regular 1234
                DEFINE                   spaced                5678                 

A=regular
A = regular
                    A               =               regular                      

A=spaced
A = spaced
                A               =               spaced              
