test/asm/negative/define_params_more.asm
DEFINE invalid 0 0

A = invalid
